--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.0.1",
     "react-router-dom": "^6.26.1"
   },
